--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,39 @@
 :root {
-  --border-color: #e7ebee;
+  --border-color: #cfd9e0;
   --link-hover-color: #e7ebee;
+  --bg-gray-light-color: rgb(247, 249, 250);
   --bg-gray-color: #e7ebee;
-  --button-color: #0059c8;
+  --button-color:rgb(3, 111, 227);
   --gray-primery: #5a657c;
-  --main-font: "Nunito Sans", sans-serif;
+  --primery-text-color: #111b2b;
+  --main-font: "Geist Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --table-head-text-color: rgb(90, 101, 124);
+  --table-body-text-color: rgb(65, 77, 99);
+  --table-body-first-text-color: rgb(65, 77, 99);
 }
 
 body {
-  background-color: white;
   font-family: var(--main-font) !important;
 }
 
-.h1 {
+#root{
+    display: flex;
+    flex-direction: column;
+    max-width: 1920px;
+    box-shadow: rgba(25, 37, 50, 0.1) 0px 6px 16px -2px, rgba(25, 37, 50, 0.15) 0px 3px 6px -3px;
+    border-radius: 10px 10px 0px 0px;
+    margin: 0px auto;
+    width: calc(100% - 2rem);
+    background-color: rgb(255, 255, 255);
+    min-height: 100vh;
+}
+
+.h1.css-pyd7rd {
   font-size: 24px;
   margin-bottom: 15px;
   font-family: var(--main-font) !important;
+  font-weight: 600;
+  color: var(--primery-text-color);
 }
 
 .mb {
@@ -45,14 +63,14 @@ body {
 }
 
 .flex-item-left {
-  flex: auto;
-  padding: 20px;
+  flex: 280px;
+  padding: 1.5rem 1rem 0px;
   height: 100vh;
 }
 
 .flex-item-right {
-  flex: 80%;
-  padding: 20px;
+  flex: 100%;
+  padding: 20px 1.5rem 0.75rem;
   height: 100vh;
 }
 
@@ -77,7 +95,7 @@ body {
 }
 
 .title-small {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   display: block;
   padding: 0px 0 20px;
@@ -94,16 +112,19 @@ body {
 .left-side-menu button[data-test-id~="cf-ui-button"] {
   background-color: white;
   color: black;
-  border-radius: 5px;
+  border-radius: 6px;
   border: 0;
   text-align: left;
-  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   font-weight: 400;
   display: block;
   box-shadow: none;
   max-width: none;
-  padding: 8;
+  padding: 6px 0.5rem;
+  color: var(--table-body-text-color);
   font-weight: 400;
+  min-height: 0;
 }
 
 .left-side-menu button svg {
@@ -111,10 +132,18 @@ body {
   margin-right: 3px;
 }
 
-.left-side-menu button:hover,
+.left-side-menu button.css-1arnxu4 {
+  color: #111B2B;
+}
+
+.left-side-menu button:hover {
+  background-color: var(--bg-gray-light-color);
+   color: var(--table-body-text-color);
+}
+
 .left-side-menu button.css-1arnxu4 {
   background-color: var(--bg-gray-color);
-  color: black;
+  font-weight: 500;
 }
 
 .content-type-box {
@@ -122,28 +151,41 @@ body {
   vertical-align: middle;
   display: flex;
   align-items: center;
-  background-color: #e7ebee;
+  background-color: rgb(231, 235, 238);
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   font-weight: 600;
   font-size: 14px;
-  flex: 12%;
+  /* flex: 12%; */
   justify-content: center;
+  color: rgb(65, 77, 99);
+  width: 151px;
+  line-height: 2rem;
 }
 
 .content-type-wrap {
-  padding: 2px;
+  padding: 3px;
   width: 100%;
   border-radius: 8px;
+  box-shadow: rgba(225, 228, 232, 0.2) 0px 2px 0px inset;
+  max-height: 40px;
 }
 
 .selectbox select[data-test-id~="cf-ui-select"] {
-  width: 100px;
   background-color: var(--button-color);
   color: white;
   border-radius: 8px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  font-weight: 400;
+  height: 33px;
+  padding: 0 30px 0 9px;
+  width: 151px;
+}
+
+.selectbox select[data-test-id~="cf-ui-select"] option {
+  background-color: white;
+  color: var(--table-head-text-color);
   font-weight: 400;
 }
 
@@ -157,15 +199,20 @@ table.css-1hz7skb {
 
 button[data-test-id~="cf-ui-button"],
 select[data-test-id~="cf-ui-select"] {
-  font-family: var(--main-font) !important;
   color: black;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  line-height: normal;
+  height: auto;
+  box-shadow: rgba(25, 37, 50, 0.08) 0px 1px 0px;
 }
 
 select[data-test-id~="cf-ui-select"] {
   padding-right: 40px;
 }
+
 select[data-test-id~="cf-ui-select"] + svg {
   right: 10px;
 }
@@ -174,24 +221,50 @@ button[data-test-id~="cf-ui-button"] svg {
   fill: black;
   margin-right: 3px;
 }
+
 input.type-search {
   border: 0;
   box-shadow: none;
   font-family: var(--main-font) !important;
+  font-size: 14px;
+  padding: 0 9px;
+  min-height: 0;
+  line-height: normal;
 }
 
-table th[data-test-id~="cf-ui-table-cell"] {
-  font-size: 12px;
-  color: var(--gray-primery);
+table[data-test-id~="cf-ui-table"] th {
+  font-size: 0.75rem;
+  color: var(--table-head-text-color);
   font-family: var(--main-font) !important;
+  font-weight: 500;
+  border-bottom: var(--border-color) 1px solid;
+  line-height: 1rem;
 }
-table td[data-test-id~="cf-ui-table-cell"] {
-  font-size: 14px;
+
+table[data-test-id~="cf-ui-table"] td,
+table[data-test-id~="cf-ui-table"] tr:last-child td {
+  font-size: 0.875rem;
   font-family: var(--main-font) !important;
+  color: var(--table-body-text-color);
+  font-weight: 500;
+  border-bottom: var(--border-color) 1px solid;
+  border-radius: 0 !important;
+  vertical-align: middle;
+  line-height: 1.25rem;
+}
+
+table[data-test-id~="cf-ui-table"] tr td:nth-child(2){
+    color: rgb(17, 27, 43);
 }
 
 label[data-test-id~="cf-ui-checkbox"] {
   color: var(--gray-primery);
+}
+
+@media only screen and (max-width: 1199px) {
+  .content-type-box {
+    width: 199px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
