--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,35 +3,38 @@
   --link-hover-color: #e7ebee;
   --bg-gray-light-color: rgb(247, 249, 250);
   --bg-gray-color: #e7ebee;
-  --button-color:rgb(3, 111, 227);
+  --button-color: rgb(3, 111, 227);
   --gray-primery: #5a657c;
   --primery-text-color: #111b2b;
-  --main-font: "Geist Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --main-font: "Geist Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   --table-head-text-color: rgb(90, 101, 124);
   --table-body-text-color: rgb(65, 77, 99);
   --table-body-first-text-color: rgb(65, 77, 99);
 }
 
 body {
-  font-family: var(--main-font) !important;
+  font-family: var(--main-font);
 }
 
-#root{
-    display: flex;
-    flex-direction: column;
-    max-width: 1920px;
-    box-shadow: rgba(25, 37, 50, 0.1) 0px 6px 16px -2px, rgba(25, 37, 50, 0.15) 0px 3px 6px -3px;
-    border-radius: 10px 10px 0px 0px;
-    margin: 0px auto;
-    width: calc(100% - 2rem);
-    background-color: rgb(255, 255, 255);
-    min-height: 100vh;
+#root {
+  display: flex;
+  flex-direction: column;
+  max-width: 1920px;
+  box-shadow: rgba(25, 37, 50, 0.1) 0px 6px 16px -2px,
+    rgba(25, 37, 50, 0.15) 0px 3px 6px -3px;
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px auto;
+  width: calc(100% - 2rem);
+  background-color: rgb(255, 255, 255);
+  min-height: 100vh;
 }
 
 .h1.css-pyd7rd {
   font-size: 24px;
   margin-bottom: 15px;
-  font-family: var(--main-font) !important;
+  font-family: var(--main-font);
   font-weight: 600;
   color: var(--primery-text-color);
 }
@@ -64,13 +67,13 @@ body {
 
 .flex-item-left {
   flex: 280px;
-  padding: 1.5rem 1rem 0px;
+  padding: 24px 16px 0px;
   height: 100vh;
 }
 
 .flex-item-right {
   flex: 100%;
-  padding: 20px 1.5rem 0.75rem;
+  padding: 20px 24px 12px;
   height: 100vh;
 }
 
@@ -115,13 +118,13 @@ body {
   border-radius: 6px;
   border: 0;
   text-align: left;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 14px;
+  line-height: 20px;
   font-weight: 400;
   display: block;
   box-shadow: none;
   max-width: none;
-  padding: 6px 0.5rem;
+  padding: 6px 8px;
   color: var(--table-body-text-color);
   font-weight: 400;
   min-height: 0;
@@ -133,12 +136,12 @@ body {
 }
 
 .left-side-menu button.css-1arnxu4 {
-  color: #111B2B;
+  color: #111b2b;
 }
 
 .left-side-menu button:hover {
   background-color: var(--bg-gray-light-color);
-   color: var(--table-body-text-color);
+  color: var(--table-body-text-color);
 }
 
 .left-side-menu button.css-1arnxu4 {
@@ -156,11 +159,10 @@ body {
   border-bottom-left-radius: 8px;
   font-weight: 600;
   font-size: 14px;
-  /* flex: 12%; */
   justify-content: center;
   color: rgb(65, 77, 99);
   width: 151px;
-  line-height: 2rem;
+  line-height: 32px;
 }
 
 .content-type-wrap {
@@ -225,7 +227,7 @@ button[data-test-id~="cf-ui-button"] svg {
 input.type-search {
   border: 0;
   box-shadow: none;
-  font-family: var(--main-font) !important;
+  font-family: var(--main-font);
   font-size: 14px;
   padding: 0 9px;
   min-height: 0;
@@ -233,28 +235,31 @@ input.type-search {
 }
 
 table[data-test-id~="cf-ui-table"] th {
-  font-size: 0.75rem;
+  font-size: 12px;
   color: var(--table-head-text-color);
-  font-family: var(--main-font) !important;
+  font-family: var(--main-font);
   font-weight: 500;
   border-bottom: var(--border-color) 1px solid;
-  line-height: 1rem;
+  line-height: 16px;
 }
 
 table[data-test-id~="cf-ui-table"] td,
 table[data-test-id~="cf-ui-table"] tr:last-child td {
-  font-size: 0.875rem;
-  font-family: var(--main-font) !important;
+  font-size: 14px;
+  font-family: var(--main-font);
   color: var(--table-body-text-color);
   font-weight: 500;
   border-bottom: var(--border-color) 1px solid;
-  border-radius: 0 !important;
   vertical-align: middle;
-  line-height: 1.25rem;
+  line-height: 20px;
+}
+table[data-test-id~="cf-ui-table"] tr:last-child td:first-child,
+table[data-test-id~="cf-ui-table"] tr:last-child td:last-child {
+  border-radius: 0;
 }
 
-table[data-test-id~="cf-ui-table"] tr td:nth-child(2){
-    color: rgb(17, 27, 43);
+table[data-test-id~="cf-ui-table"] tr td:nth-child(2) {
+  color: rgb(17, 27, 43);
 }
 
 label[data-test-id~="cf-ui-checkbox"] {
