--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,7 @@ body {
 h3[data-test-id~="cf-ui-subheading"]{
   font-size: 14px;
   font-weight: 400;
-  margin: 0;
+  margin-top: 4px;
 }
 
 .mb {
